option java_package = "protobuf.generate.device.device";
option java_outer_classname = "Device";

message CDevice {
	required string self = 1;       //发送消息者的userid
	required string dest = 2;       //消息目标的userid
	required string content = 3;    //消息内容
}

message SPrivateChat {
    required  string content = 1;
}